--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --white: #ffffff;
+  --black: #000000;
+}
+
 body {
+  color: var(--black);
+  background: var(--white);
   font-family: Arial, Helvetica, sans-serif;
 }
 
