--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,12 @@
 :root {
   --white: #ffffff;
   --black: #000000;
+  --background: #250900;
 }
 
 body {
   color: var(--black);
-  background: var(--white);
+  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
 
