--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,11 @@
   --background: #250900;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   color: var(--black);
   background: var(--background);
